<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.crr0004.intervalme.interval.IntervalAddFragment">



        <Button
            android:id="@+id/increaseDurationBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/plus_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/intervalDurationTxt"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <Button
            android:id="@+id/decreaseDurationBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/minus_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/intervalDurationTxt"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/intervalDurationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/duration_placeholder"
        android:textAppearance="@style/Input.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/intervalDurationTxt"
        android:text="@string/duration"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalNameTxt" />

    <Button
        android:id="@+id/goToListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/go_to_list"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalAddGroupSelectionFrag" />

    <Button
        android:id="@+id/intervalAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalAddGroupSelectionFrag" />

    <EditText
        android:id="@+id/intervalNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusRight="@id/intervalDurationTxt"
        android:textAppearance="@style/Input.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:text="@string/name">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/goToClockSampleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Go To Clock Sample"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/goToListBtn"
        app:layout_constraintStart_toEndOf="@+id/intervalAddBtn"
        app:layout_constraintTop_toBottomOf="@+id/intervalAddGroupSelectionFrag" />

    <fragment
        android:id="@+id/intervalAddGroupSelectionFrag"
        android:name="io.github.crr0004.intervalme.interval.IntervalSimpleGroupListFragment"
        android:layout_width="0dp"
        android:layout_height="344dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxHeight="512dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increaseDurationBtn"
        />

</android.support.constraint.ConstraintLayout>
