...
        android:transitionName="toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/intervalsExpList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
...
