<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/routineManageBasicDescriptionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/routine_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/Input.Large"
        app:layout_constraintEnd_toStartOf="@+id/routineManageTemplateChxBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        tools:text="Routine Name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/routineManageBasicRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/routineEditAddExerciseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routineManageBasicDescriptionTxt"
        tools:ignore="UnusedAttribute"
        tools:listitem="@android:layout/list_content" />

    <ImageButton
        android:id="@+id/routineEditCommitBtn"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_routine"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_done_white_24dp" />

    <ImageButton
        android:id="@+id/routineEditAddExerciseBtn"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_exercise_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/routineEditDeleteExerciseBtn"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <ImageButton
        android:id="@+id/routineEditDeleteExerciseBtn"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/delete_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete" />

    <CheckBox
        android:id="@+id/routineManageTemplateChxBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/template"
        android:textAppearance="@style/Input.Small"
        app:layout_constraintBottom_toBottomOf="@+id/routineManageBasicDescriptionTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/routineManageBasicDescriptionTxt" />
</android.support.constraint.ConstraintLayout>